Delete font-azo in korean page

--- a/kr/business.html
+++ b/kr/business.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
     <script src="../assets/js/common.js"></script>        
@@ -33,7 +34,7 @@
     <div class="page page-scroll page-in" id="page-business">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Make the world more creative</span>
                 <h3>Business Portfolio</h3>
@@ -61,7 +62,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img02.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">모빌리티 테크놀로지</h3>
+                        <h3>모빌리티 테크놀로지</h3>
                         <span>01</span>
                         <p>
                             NIA의 지능형 통합 교통 플랫폼을 통하여 실시간 위치 추적, 교통량 관제, 차량, 거리 및 비용 계산 등의 빅 데이터를 수집하며 제공된 솔루션은 빅데이터를 활용하여 수요 예측, 위험 관리, 대응이 가능합니다.
@@ -71,12 +72,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">제품 및 서비스:</h4>
+                        <h4>제품 및 서비스:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img03.png" />
                                 <div>
-                                    <em class="font-azo"><span>01</span>Mobility Technology</em>
+                                    <em><span>01</span>Mobility Technology</em>
                                     <h5>ITS (지능형 교통 체계) 개발)</h5>
                                     <span>
                                         수년간 축적한 다양한 기술과 지식으로 교통 플랫폼을 기획, 설계, 개발하며 최종적으로 전자, 정보, 통신 등 최신 기술을 운영하여 교통 시스템의 효율성과 안정성을 높이는 것을 목표로 합니다.
@@ -125,7 +126,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img29.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">예약·예매 시스템</h3>
+                        <h3>예약·예매 시스템</h3>
                         <span>02</span>
                         <p>
                             NIA의 대표 제품 및 서비스에 티켓 예약 및 예매 시스템이 포함되어 있으며 이 솔루션을 통해 고객에게 효율적이고 안정적인 예약·예매 경험을 제공합니다. 현대 기술을 갖춘 예약·예매 시스템을 통하여 여정 계획 시 편리함을 제공하고 언제 어디서나 안전하고 편리하게 티켓을 구매할 수 있는 서비스를 제공합니다.
@@ -136,12 +137,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">제품 및 서비스:</h4>
+                        <h4>제품 및 서비스:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img07.jpg" />
                                 <div>
-                                    <em class="font-azo"><span>02</span>Ticketing System and Reservation</em>
+                                    <em><span>02</span>Ticketing System and Reservation</em>
                                     <h5>리포트 및 통계 데이터를 통한 최신 비즈니스 분석 정보 제공</h5>
                                     <span>
                                         리포트와 통계 데이터를 통하여 사용자에게 중요한 비즈니스 분석 정보를 제공하며 이 데이터를 바탕으로 비즈니스 성과의 이해도를 높이고 보다 전략적인 결정과 계획을 수립할 수 있습니다.
@@ -182,7 +183,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img10.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">결제 시스템</h3>
+                        <h3>결제 시스템</h3>
                         <span>03</span>
                         <p>
                             결제 시스템과 관련된 다양한 제품 및 서비스를 제공하고 있으며 이러한 제품 및 서비스는 고객에게 쉽고 안전한 금융거래 및 관리 서비스를 제공합니다. 이외에도 비즈니스의 지속 가능성과 재무 거래의 보안을 지원하고 효율적이고 신뢰할 수 있는 결제 솔루션을 제공하기 위해 최선을 다하고 있습니다.
@@ -192,12 +193,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">제품 및 서비스:</h4>
+                        <h4>제품 및 서비스:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img11.png" />
                                 <div>
-                                    <em class="font-azo"><span>03</span>Payment System</em>
+                                    <em><span>03</span>Payment System</em>
                                     <h5>종합적 결제 방법</h5>
                                     <span>
                                         원활한 거래를 위해 다양한 결제수단을 제공하고 있으며 다양한 결제 옵션을 통해 고객이 원하는 결제방법을 선택할 수 있는 유연성과 편의성을 제공하여 더욱 더 편리하고 효율적인 거래 경험을 제공합니다.
@@ -266,7 +267,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img16.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">IT 서비스 운영 및 관리</h3>
+                        <h3>IT 서비스 운영 및 관리</h3>
                         <span>04</span>
                         <p>
                             ITSM (IT 서비스 관리) 서비스는 IT 시스템 및 서비스의 성능을 관리하고 향상하는 데 도움을 주기 위해 설계된 다양한 제품과 서비스를 포함합니다. ITSM을 통해 IT 서비스의 효과적인 계획, 운영, 모니터링을 지원하는 통합 솔루션을 제공하며 효율적인 서비스 관리에 중점을 둔 ITSM 제품 및 서비스는 회사의 생산성, 효율성 및 운영 안정성을 향상시키는 데 도움이 될 수 있습니다.
@@ -276,12 +277,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">제품 및 서비스:</h4>
+                        <h4>제품 및 서비스:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img17.png" />
                                 <div>
-                                    <em class="font-azo"><span>04</span>IT Service Management</em>
+                                    <em><span>04</span>IT Service Management</em>
                                     <h5>간편한 비즈니스 KPI(핵심성과지표) 관리</h5>
                                     <span>
                                         간편하게 비즈니스 KPI(핵심성과지표) 관리를 용이하게 할 수 있으며 이러한 접근 방식을 통해 사용자는 보다 실용적이고 효과적인 모니터링이 가능합니다.
@@ -341,7 +342,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img21.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">물류 및 배송 시스템</h3>
+                        <h3>물류 및 배송 시스템</h3>
                         <span>05</span>
                         <p>
                             NIA의 물류 및 배송 시스템은 정교하고 안정적인 솔루션으로 설계되어 상품 관리와 배송 모두에 있어 최적의 원활한 서비스를 보장하며 모든 고객에게 효율적이고 만족스러운 시스템을 제공하기 위해 최선을 노력을 다합니다.
@@ -351,12 +352,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">제품 및 서비스:</h4>
+                        <h4>제품 및 서비스:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img22.png" />
                                 <div>
-                                    <em class="font-azo"><span>05</span>Logistic and Delivery System</em>
+                                    <em><span>05</span>Logistic and Delivery System</em>
                                     <h5>물류차량 실시간 위치 추적 및 모니터링</h5>
                                     <span>
                                         물류차량의 위치를 실시간으로 모니터링하고 추적하는 기능으로 최신 기술을 통해 배송 및 물류 관리의 효율성을 강화합니다.
@@ -416,7 +417,7 @@
                 <div class="flex-box">
                     <img src='../assets/img/business-img26.png' />
                     <div class="text-box">
-                        <h3 class="font-azo">라이브 스트리밍 플랫폼</h3>
+                        <h3>라이브 스트리밍 플랫폼</h3>
                         <span>06</span>
                         <p>
                             NIA의 대표 서비스는 라이브 스트리밍 플랫폼을 중심으로 이루어지며 최신 기술을 통합하고 사용자 경험을 최적화함으로써 사용자에게 고품질의 매력적인 라이브 스트리밍 경험을 제공하고 있습니다. 이 서비스를 통해 우리는 고객의 요구와 기대에 부응하여 더욱 더 상호적이고 만족스러운 고객 경험을 제공하고자 최선을 다하고 있습니다.
@@ -426,12 +427,12 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4 class="font-azo">제품 및 서비스:</h4>
+                        <h4>제품 및 서비스:</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img27.png" />
                                 <div>
-                                    <em class="font-azo"><span>06</span>Live Streaming Platform</em>
+                                    <em><span>06</span>Live Streaming Platform</em>
                                     <h5>웹 사이트, 모바일 앱 및 화상 통화를 통한 온라인 상담</h5>
                                     <span>
                                         홈페이지, 모바일 앱, 영상통화 등 다양한 플랫폼을 통해 온라인 상담 서비스를 제공하며 최신 기술을 활용하여 고객이 개인 통신 기기를 통해 편리하고 효율적으로 상담을 받을 수 있도록 지원합니다.  
