--- a/kr/introduction.html
+++ b/kr/introduction.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+    
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
     <script src="../assets/js/common.js"></script>    
@@ -39,7 +40,7 @@
     <div class="page page-in" id="page-introduction">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Connect people with technology</span>
                 <h3>Introduction</h3>
@@ -58,11 +59,6 @@
                     </p>
                 </div>
             </div>
-
-            <!--<div class="text-wrapper font-azo">
-                Connecting people and the world through<br />
-                <em>Technology</em>
-            </div>-->
         </div>
         <!-- about-wrapper end -->
 
@@ -72,15 +68,15 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">비전 & 미션</h3>
+                    <h3>비전 & 미션</h3>
 
-                    <h4 class="font-azo">비전 :</h4>
+                    <h4>비전 :</h4>
 
                     <p>
                         교통 및 인프라, 보건, 교육, 물류, 스마트 팩토리, 온라인 결제 시스템 및 기타 분야 발전을 위한 기술을 개발하며 친환경 제품과 서비스를 최우선으로 하는 인도네시아의 선도적인 IT 기업이 되겠습니다.
                     </p>
 
-                    <h4 class="font-azo">미션 :</h4>
+                    <h4>미션 :</h4>
 
                     <ul>
                         <li>
@@ -115,9 +111,9 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">핵심 가치</h3>
+                    <h3>핵심 가치</h3>
 
-                    <h4 class="font-azo core-value">
+                    <h4 class="core-value">
                         <img src="../assets/img/icon/icon-quotes01.svg" />
                         <span class="letter-c1">C</span>
                         <span class="letter-o">O</span>
@@ -179,7 +175,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">경영 철학</h3>
+                    <h3>경영 철학</h3>
 
                     <div class="block-box">
                         <img src="../assets/img/icon/icon-block01.svg" />
@@ -201,7 +197,7 @@
             <div class="row">
                 <div class="imx">
 
-                    <h3 class="font-azo">Our History</h3>
+                    <h3>연혁</h3>
 
                     <div class="clear">
                         <span class="fl w15 year">2023</span>
