--- a/kr/media/media_2.html
+++ b/kr/media/media_2.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../../assets/js/owl.carousel.min.js"></script>
     <script src="../../assets/js/common.js"></script>    
@@ -25,7 +26,7 @@
     <div class="page page-detail" id="page-media-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Media Report</h3>
@@ -38,7 +39,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">2 Terminal Bus di RI Akan Dimodernisasi</h3>
+                        <h3>2 Terminal Bus di RI Akan Dimodernisasi</h3>
                         <span>DATE : 2022-11-21</span>
 
                         <img src="../../assets/img/media-detail-img02.jpg" />
