--- a/kr/office.html
+++ b/kr/office.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
     <script src="../assets/js/common.js"></script>
@@ -39,7 +40,7 @@
     <div class="page" id="page-office">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>PT. Networks Indonesia Aku</span>
                 <h3>Our Office</h3>
@@ -50,7 +51,6 @@
         <!-- office-wrapper start -->
         <div class='office-wrapper'>
             <div class="row">
-                <!-- <h3 class="font-azo">Our Office</h3> -->
 
                 <div class="clear">
                     <div class="fl w50 sld-box">
@@ -69,7 +69,7 @@
                     </div>
                     
                     <div class="fr w50 caption"> 
-                        <span class="font-azo">Beyond Technology, Towards People</span>
+                        <span>Beyond Technology, Towards People</span>
 
                         <h4>PT. NETWORKS INDONESIA AKU</h4>
 
