--- a/kr/people.html
+++ b/kr/people.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
     <script src="../assets/js/common.js"></script>    
@@ -30,7 +31,7 @@
     <div class="page page-scroll page-in" id="page-people">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Teamwork makes the dreamwork</span>
                 <h3>NIA People</h3>
@@ -41,12 +42,6 @@
         <!-- people-wrapper start -->
         <div class='people-wrapper'>
 
-            <div class="row">
-                <div class="imx">
-                    <!-- <h3 class="font-azo">NIA People</h3> -->
-                </div>
-            </div>
-            
             <div class="member-box">
                 <div class="row">
                     <div class="item-box clear">
@@ -61,9 +56,6 @@
                                     </figcaption>
                                     <a href="#"></a>
                                 </figure>
-                                <!--<img src="../assets/img/about-img09.png" />
-                                <h4>Mr. Son</h4>
-                                <span class="font-azo">President of Indonesia Branch Office</span>-->
                             </div>
                         </div>
 
