--- a/kr/ceo.html
+++ b/kr/ceo.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
     <script src="../assets/js/common.js"></script>    
@@ -25,7 +26,7 @@
     <div class="page page-scroll page-in" id="page-ceo">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>The past and the future</span>
                 <h3>CEO Messsage</h3>
@@ -39,8 +40,6 @@
             <div class="section">
                 <div class="row">
                     <div class="imx">
-
-                        <!-- <h3 class="font-azo">CEO Message</h3> -->
 
                         <div class="inner">
                             <img class="ceo-img" src='../assets/img/headquarters-img02.png' />
