--- a/kr/notice/notice_1.html
+++ b/kr/notice/notice_1.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../../assets/js/owl.carousel.min.js"></script>
     <script src="../../assets/js/common.js"></script>    
@@ -25,7 +26,7 @@
     <div class="page page-detail page-in" id="page-notice-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Notice</h3>
@@ -38,7 +39,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Upacara Pembukaan Tahun Baru 2023 di PT Samchully Networks</h3>
+                        <h3>Upacara Pembukaan Tahun Baru 2023 di PT Samchully Networks</h3>
                         <span>DATE : 2023-01-02</span>
 
                         <p>(주)삼천리네트웍스( 대표 임진혁) 는 1 월 2 일 대회의실에서 2023 년도 시무식을 거행했다.</p>
