--- a/kr/notice/notice_4.html
+++ b/kr/notice/notice_4.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../../assets/js/owl.carousel.min.js"></script>
     <script src="../../assets/js/common.js"></script>    
@@ -25,7 +26,7 @@
     <div class="page page-detail page-in" id="page-notice-detail">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Media Report from NIA</span>
                 <h3>Notice</h3>
@@ -38,7 +39,7 @@
                 <div class="imx">
 
                     <div class="text-box">
-                        <h3 class="font-azo">Pelatihan dan Seminar Sistem Modernisasi Bus Telah Diselenggarakan untuk Petugas Terminal</h3>
+                        <h3>Pelatihan dan Seminar Sistem Modernisasi Bus Telah Diselenggarakan untuk Petugas Terminal</h3>
                         <span>DATE : 2023-02-20</span>
 
                         <p>
