--- a/kr/video.html
+++ b/kr/video.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
     <script src="../assets/js/common.js"></script>    
@@ -25,7 +26,7 @@
     <div class="page page-scroll page-in" id="page-video">
 
         <!-- bg-wrapper start -->
-        <div class="bg-wrapper font-azo">
+        <div class="bg-wrapper">
             <div class="text-box">
                 <span>Our Activity</span>
                 <h3>Video Documentation</h3>
@@ -41,10 +42,10 @@
                     <div class="imx">
 
                         <!-- Video start -->
-                        <em class="font-azo"><span>01</span>Jejak Waktu Kita - The Jorney Of Terminal Modernization</em>
+                        <em><span>01</span>Jejak Waktu Kita - The Jorney Of Terminal Modernization</em>
                         <iframe width="920" height="480" src="https://www.youtube.com/embed/Tb2LdiUj0hQ?si=HbfkiSWvzFq7U5wt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-                        <em class="font-azo"><span>02</span>Opening Ceremony Smart Terminal</em>
+                        <em><span>02</span>Opening Ceremony Smart Terminal</em>
                         <iframe width="920" height="480" src="https://www.youtube.com/embed/AUgskRthB6w?si=npAbkNFojmYBiLHr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <!-- Video end -->
 
